--- a/webapp/templates/table.html
+++ b/webapp/templates/table.html
@@ -20,7 +20,7 @@
               {% endfor %}
             </marquee>
           </div>
-          <table class="table table-bordered table-striped">
+          <table class="table table-bordered table-striped" style="margin-top: 15px">
             <thead>
               <tr>
                 <th>#</th>
