Fix voenkom disable

--- a/webapp/templates/table.html
+++ b/webapp/templates/table.html
@@ -7,19 +7,19 @@
         <script src="/static/bootstrap.min.js"></script>
     </head>
     <body>
-        <!--<div class="container">-->
-        <!--    <div class="jumbotron">-->
-        <!--        <h1>Центр управления полетами</h1>-->
-        <!--    </div>-->
-        <!--</div>-->
         <div class="container">
-          <div>
-            <marquee behavior="alternate" direction="right" scrollamount="3" scrolldelay="10" truespeed>
-              {% for _ in range(5) %}
-                <img src="/static/voenkom.jpg">
-              {% endfor %}
-            </marquee>
-          </div>
+            <div class="jumbotron">
+                <h1>Центр управления полетами</h1>
+            </div>
+        </div>
+        <div class="container">
+          <!--<div>-->
+          <!--  <marquee behavior="alternate" direction="right" scrollamount="3" scrolldelay="10" truespeed>-->
+          <!--    {% for _ in range(5) %}-->
+          <!--      <img src="/static/voenkom.jpg">-->
+          <!--    {% endfor %}-->
+          <!--  </marquee>-->
+          <!--</div>-->
           <table class="table table-bordered table-striped" style="margin-top: 15px">
             <thead>
               <tr>
