Make logo clickable

--- a/webapp/templates/admin.html
+++ b/webapp/templates/admin.html
@@ -9,12 +9,18 @@
     <script src="static/scripts/bootstrap-select.min.js"></script>
     <script src="static/scripts/bootstrap3-typeahead.min.js"></script>
     <script src="static/scripts/validator.min.js"></script>
+    <style type="text/css">
+      a.deco-none {
+        color:#000000 !important;
+        text-decoration:none;
+      }
+    </style>
   </head>
   <body>
     <div class="container">
       <div class="jumbotron">
         <div class="pull-right"><a href="admin"><span class="glyphicon glyphicon-log-in"></span></a></div>
-        <h1>Центр управления полетами</h1>
+        <a href="index" class="deco-none"><h1>Центр управления полетами</h1></a>
       </div>
     </div>
     <div class="container">
