--- a/webapp/templates/index.html
+++ b/webapp/templates/index.html
@@ -5,12 +5,18 @@
     <link rel="stylesheet" href="/static/styles/bootstrap.min.css">
     <script src="/static/scripts/jquery.min.js"></script>
     <script src="/static/scripts/bootstrap.min.js"></script>
+    <style type="text/css">
+      a.deco-none {
+        color:#000000 !important;
+        text-decoration:none;
+      }
+    </style>
   </head>
   <body>
     <div class="container">
       <div class="jumbotron">
         <div class="pull-right"><a href="admin"><span class="glyphicon glyphicon-log-in"></span></a></div>
-        <h1>Центр управления полетами</h1>
+        <a href="index" class="deco-none"><h1>Центр управления полетами</h1></a>
       </div>
     </div>
     <div class="container">
