Use modern tech

--- a/webapp/templates/index.html
+++ b/webapp/templates/index.html
@@ -22,8 +22,8 @@
     <div class="container">
       <div>
         <marquee behavior="alternate" direction="right" scrollamount="3" scrolldelay="10" truespeed>
-          {% for _ in range(5) %}
-            <img src="/static/voenkom.jpg">
+          {% for _ in range(3) %}
+            <img src="/static/vzhuh.jpg">
           {% endfor %}
         </marquee>
       </div>
