--- a/webapp/templates/index.html
+++ b/webapp/templates/index.html
@@ -38,7 +38,7 @@
           </tr>
         </thead>
         <tbody>
-          {% for name, labs in students.items()|sort %}
+          {% for name, labs in students_labs %}
             <tr>
               <th scope="row">{{loop.index}}</th>
               <td>
